# thaali

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  REFS  TODO  autogen.sh  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  thaali.c
